--- a/Develop/client/index.html
+++ b/Develop/client/index.html
@@ -17,6 +17,9 @@
       <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/theme/monokai.min.css">
       </link>
+      <link rel="stylesheet"
+        href="../../Develop/client/src/css/style.css">
+    </link>
   </head>
   <body>
     <nav id="navbar">
@@ -26,7 +29,7 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand" 
-            ><img src="./assets/icons/icon_96x96.png"
+            ><img src="./favicon.ico"
           /></div>
     </nav>
 
